--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
                         <a href="#portfolio">관심분야</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">소개</a>
+                        <a href="#about">소개v</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">연락처</a>
@@ -76,7 +76,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/lila.png" alt="">
                     <div class="intro-text">
-                        <span class="name">박지수의 홈페이지입니다</span>
+                        <span class="name">박지수의 홈페이지입니다!_!</span>
                         <hr class="star-light">
                         <span class="skills">동덕여자대학교 컴퓨터학과 박지수</span>
                     </div>
